added a simple bio section

--- a/src/app/components/bio/bio.component.html
+++ b/src/app/components/bio/bio.component.html
@@ -1,1 +1,10 @@
-<p>bio works!</p>
+<div class="bio-container">
+  <p>
+    When I graduated from Musicians Institute in 2010, I had no idea what it'd take to get to where I'm at.
+    Before the fancy titles like multi-platinum and GRAMMY-winning, my professional career as an audio engineer was anything but promising.
+    Whether I was picking up trash and cleaning restrooms as an unpaid intern, delivering food as a minimum wage runner, or working 90-hour weeks as an established freelancer, my success has been based on a series of choices.
+    Every breakthrough moment came from taking a chance, and if there's one thing I've learned over the past decade, fear is a direction more than it is a feeling—let it guide you.
+    My passion for music has taken me around the world and put me in the same room as some of my idols.
+    It's a privilege to help fellow creatives execute their vision, and audio engineering is an art; I treat it as such.
+  </p>
+</div>
